--- a/index.html
+++ b/index.html
@@ -44,9 +44,22 @@
                 ============================================ -->
 		<div class="sticker" id="main-menu">
 			<div class="container">
+
 				<div class="row">
 					<div class="col-md-12">
-						<div class="logo float-left"><a href="index.html"><img alt="logo" src="img/logo/logo.png" /></a></div>
+						<span class="float-right hidden-xs hidden-sm" style="color: #FFFFFF; font-weight: bold;font-family: 'Lato', sans-serif;">0800 042 0060</span>
+
+					</div>
+					<div class="row">
+						<div class="col-xs-12" style="text-align: center">
+							<span class="center-block hidden-md hidden-lg" style="color: #FFFFFF; font-weight: bold;font-family: 'Lato', sans-serif;">0800 042 0060</span>
+
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-12">
+						<div class="logo float-left"><a href="index.html"><img alt="logo" src="img/logo/logo.svg" /></a></div>
 
 						<div class="main-menu float-right">
 							<nav>
@@ -100,7 +113,7 @@
 
 										<p style="text-align: justify;">Seja bem vindo a Yuuup Monitoramento e Rastreamento Ve&iacute;cular, aqui voc&ecirc; encontra uma Solu&ccedil;&atilde;o completa para a Prote&ccedil;&atilde;o do seu Ve&iacute;culo. Oferecemos uma telemetria de primeiro mundo com tecnologia Israelense e contamos com a parceira exclusiva da Infinity Auto Gest&atilde;o. Baixe nosso app !&nbsp;</p>
 
-										<div class="button-set"><a class="button active" href="#"><span>Dispon&iacute;vel&nbsp;no&nbsp;<span class="large-text">App Store</span> </span></a><a class="button btn-mobile" href="#"><span>Dispon&iacute;vel&nbsp;no&nbsp;<span class="large-text">Play Store</span> </span> </a></div>
+										<div class="button-set"><a class="button active" href="#"><i class="fa fa-apple" aria-hidden="true"></i><span>Dispon&iacute;vel&nbsp;no&nbsp;<span class="large-text">App Store</span> </span></a><a class="button btn-mobile" href="#"><i class="fa fa-android" aria-hidden="true"></i><span>Dispon&iacute;vel&nbsp;no&nbsp;<span class="large-text">Play Store</span> </span> </a></div>
 									</div>
 								</div>
 							</div>
@@ -356,19 +369,11 @@
 						<p>Fa&ccedil;a parte deste clube ao qual voc&ecirc; s&oacute; tem a ganhar, nosso melhor Marketing e sua indica&ccedil;&atilde;o, assim sendo reconhecemos e oferecemos este sistema de incentivo, ao qual voc&ecirc; ganha desconto por indica&ccedil;&atilde;o. A seguir nosso sistema, se voc&ecirc; j&aacute; for cliente, poder&aacute; acessar atrav&eacute;s deste sistema incr&iacute;vel. Confira!</p>
 					</div>
 
-					<div class="download-links">
-						<div class="text fix">
-							<h4><a href="#">Nome do Associado</a></h4>
-						</div>
-
-						<div class="text fix">
-							<h4><a class="res-xs" href="#">Senha do Associado</a></h4>
-						</div>
-
-						<div class="text fix">
-							<h4><a href="#">Entrar</a></h4>
-						</div>
-					</div>
+					<form class="contact-from" action="http://sistema.yuuup.com.br/" method="post">
+						<input name="login" placeholder="Usuário" type="text" />
+						<input name="senha" placeholder="Senha" type="password" />
+						<input class="submit" name="Login" type="submit" value="Acessar" />
+					</form>
 				</div>
 			</div>
 		</div>
@@ -593,80 +598,86 @@
 			</div>
 
 			<div class="row">
-				<div class="col-md-4 col-sm-4 col-xs-12">
+				<div class="col-md-4 col-sm-12 col-xs-12">
 					<div class="single-price-package">
 						<div class="price-title">
-							<h3>Yuuup Silver</h3>
+							<h3>Plano Familiar</h3>
 						</div>
 
 						<div class="price">
-							<h4><span class="text-top">R$</span>&nbsp;45</h4>
+							<h4><span class="text-top">R$</span>&nbsp;19,90</h4>
 
 							<p><span class="text-bottom">/m&ecirc;s</span></p>
 						</div>
 
 						<div class="price-list">
-							<ul>
-								<li>Five Website</li>
-								<li>Five User</li>
-								<li>100 GB Bandwidth</li>
-								<li>2 GB Storage</li>
-								<li>24x7 Support</li>
+							<ul style="text-transform: uppercase; padding: 15px">
+								<li>Monitoramento sem uso de aparelho</li>
+								<li>Acesso via App</li>
+								<li>Configuração via celular</li>
+								<li>Ideal para uso familiar para saber onde está seu filho</li>
+								<li>Compatível com diversos smartphones</li>
+								<small>*Configuração R$ 100,00</small>
+
 							</ul>
 
-							<div class="price-btn"><button class="button" type="button">Sign up</button></div>
+<!--							<div class="price-btn"><button class="button" type="button">Sign up</button></div>-->
 						</div>
 					</div>
 				</div>
 
-				<div class="col-md-4 col-sm-4 col-xs-12">
+				<div class="col-md-4 col-sm-12 col-xs-12" >
 					<div class="single-price-package active res-xs">
 						<div class="price-title">
-							<h3>Yuuup Gold</h3>
+							<h3>Plano Yuuup</h3>
 						</div>
 
 						<div class="price">
-							<h4><span class="text-top">R$</span>&nbsp;65</h4>
+							<h4><span class="text-top">R$</span>&nbsp;45,00</h4>
 
 							<p><span class="text-bottom">/m&ecirc;s</span></p>
 						</div>
 
 						<div class="price-list">
-							<ul>
-								<li>Five Website</li>
-								<li>Five User</li>
-								<li>100 GB Bandwidth</li>
-								<li>2 GB Storage</li>
-								<li>24x7 Support</li>
+							<ul style="text-transform: uppercase; padding: 15px">
+								<li>RASTREMANETO E MONITORAMENTO</li>
+								<li>ACESSO VIA APP</li>
+								<li>TELEMETRIA</li>
+								<li>ACESSO TOTAL WEB</li>
+								<li>COMANDOS LIGA/DESLIGA</li>
+								<li>SUPORTE TÉCNICO 24/7</li>
+								<small>*30 dias após Instalação (R$ 350,00 ref. a instalação comodato).</small>
 							</ul>
 
-							<div class="price-btn"><button class="button" type="button">Sign up</button></div>
+<!--							<div class="price-btn"><button class="button" type="button">Sign up</button></div>-->
 						</div>
 					</div>
 				</div>
 
-				<div class="col-md-4 col-sm-4 col-xs-12">
+				<div class="col-md-4 col-sm-12 col-xs-12">
 					<div class="single-price-package">
 						<div class="price-title">
-							<h3>Yuuup Platinum</h3>
+							<h3>Plano Infinity UBER</h3>
 						</div>
 
 						<div class="price">
-							<h4><span class="text-top">R$</span>&nbsp;95</h4>
+							<h4><span class="text-top">R$</span>&nbsp;149,00</h4>
 
 							<p><span class="text-bottom">/m&ecirc;s</span></p>
 						</div>
 
 						<div class="price-list">
-							<ul>
-								<li>Five Website</li>
-								<li>Five User</li>
-								<li>100 GB Bandwidth</li>
-								<li>2 GB Storage</li>
-								<li>24x7 Support</li>
+							<ul style="text-transform: uppercase; padding: 15px">
+								<li>Cobertura Veicular Completa</li>
+								<li>Roubo / Furto / Colisão</li>
+								<li>Danos Materiais a Terceiros</li>
+								<li>Danos Natureza e Incêndio</li>
+								<li>Assistência 24HS (Guincho, Carga bateria, Chaveiro, troca pneus, e muito mais)</li>
+								<li>Clube de benefícios</li>
+								<small>*Fipe até R$ 20.000,00, outros valores entrar em contato.</small>
 							</ul>
 
-							<div class="price-btn"><button class="button" type="button">Sign up</button></div>
+<!--							<div class="price-btn"><button class="button" type="button">Sign up</button></div>-->
 						</div>
 					</div>
 				</div>
@@ -755,26 +766,21 @@
 		</div>
 	</div>
 
-	<div class="icon-slider-area ptb-110">
+	<div class="col-xs-12 ptb-110">
 		<div class="container">
 			<div class="row">
-				<div class="item_all indicator-style3">
-					<div class="col-md-12 single-item2"><a href="#"><img alt="" src="img/logo-slider/2.png" /></a></div>
+					<div class="col-lg-2 col-md-3 col-sm-4 col-xs-6 single-item2"><a href="#"><img alt="" src="img/logo-slider/2.png" /></a></div>
+					<div class="col-lg-2 col-md-3 col-sm-4 col-xs-6 single-item2"><a href="#"><img alt="" src="img/logo-slider/2.png" /></a></div>
+					<div class="col-lg-2 col-md-3 col-sm-4 col-xs-6 single-item2"><a href="#"><img alt="" src="img/logo-slider/2.png" /></a></div>
+					<div class="col-lg-2 col-md-3 col-sm-4 col-xs-6 single-item2"><a href="#"><img alt="" src="img/logo-slider/2.png" /></a></div>
+					<div class="col-lg-2 col-md-3 col-sm-4 col-xs-6 single-item2"><a href="#"><img alt="" src="img/logo-slider/2.png" /></a></div>
+					<div class="col-lg-2 col-md-3 col-sm-4 col-xs-6 single-item2"><a href="#"><img alt="" src="img/logo-slider/2.png" /></a></div>
+					<div class="col-lg-2 col-md-3 col-sm-4 col-xs-6 single-item2"><a href="#"><img alt="" src="img/logo-slider/2.png" /></a></div>
+					<div class="col-lg-2 col-md-3 col-sm-4 col-xs-6 single-item2"><a href="#"><img alt="" src="img/logo-slider/2.png" /></a></div>
+					<div class="col-lg-2 col-md-3 col-sm-4 col-xs-6 single-item2"><a href="#"><img alt="" src="img/logo-slider/2.png" /></a></div>
+					<div class="col-lg-2 col-md-3 col-sm-4 col-xs-6 single-item2"><a href="#"><img alt="" src="img/logo-slider/2.png" /></a></div>
+					<div class="col-lg-2 col-md-3 col-sm-4 col-xs-6 single-item2"><a href="#"><img alt="" src="img/logo-slider/2.png" /></a></div>
 
-					<div class="col-md-12 single-item2"><a href="#"><img alt="" src="img/logo-slider/3.png" /></a></div>
-
-					<div class="col-md-12 single-item2"><a href="#"><img alt="" src="img/logo-slider/4.png" /></a></div>
-
-					<div class="col-md-12 single-item2"><a href="#"><img alt="" src="img/logo-slider/5.png" /></a></div>
-
-					<div class="col-md-12 single-item2"><a href="#"><img alt="" src="img/logo-slider/2.png" /></a></div>
-
-					<div class="col-md-12 single-item2"><a href="#"><img alt="" src="img/logo-slider/3.png" /></a></div>
-
-					<div class="col-md-12 single-item2"><a href="#"><img alt="" src="img/logo-slider/4.png" /></a></div>
-
-					<div class="col-md-12 single-item2"><a href="#"><img alt="" src="img/logo-slider/5.png" /></a></div>
-				</div>
 			</div>
 		</div>
 	</div>
@@ -793,7 +799,11 @@
 
 				<div class="col-md-offset-2 col-md-8 text-center">
 					<div class="contact-from">
-						<form action="mail.php" id="contact-form" method="post"><input name="nome" placeholder="Name" type="text" /> <input name="email" placeholder="Email" type="text" /><textarea name="mensagem" placeholder="Your message"></textarea> <input class="submit" type="submit" value="SUBMIT" /></form>
+						<form action="mail.php" id="contact-form" method="post">
+							<input name="nome" placeholder="Name" type="text" />
+							<input name="email" placeholder="Email" type="text" />
+							<textarea name="mensagem" placeholder="Your message"></textarea>
+							<input class="submit" type="submit" value="Enviar" /></form>
 
 						<p class="form-messege"></p>
 					</div>
@@ -804,7 +814,12 @@
 				<div class="conatct-info fix">
 					<div class="col-md-4 col-sm-4 text-center">
 						<div class="single-contact-info">
-							<div class="contact-icon"></div>
+							<a href="https://api.whatsapp.com/send?phone=5551993052076&amp;text=Ol%C3%A1%2C%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es...">
+
+								<div class="contact-icon">
+									<i class="fa fa-whatsapp" aria-hidden="true"></i>
+								</div>
+							</a>
 
 							<div class="contact-text"><span>051&nbsp;3549&nbsp;8090<br />
 051&nbsp;9938 10352</span></div>
@@ -813,8 +828,9 @@
 
 					<div class="col-md-4 col-sm-4 text-center">
 						<div class="single-contact-info res-xs2">
-							<div class="contact-icon"></div>
-
+							<div class="contact-icon">
+								<i class="fa fa-envelope-o" aria-hidden="true"></i>
+							</div>
 							<div class="contact-text"><span><a href="#">contato@yuuup.com</a><br />
 <a href="#">yuuup.com.br</a></span></div>
 						</div>
@@ -822,9 +838,14 @@
 
 					<div class="col-md-4 col-sm-4 text-center">
 						<div class="single-contact-info">
-							<div class="contact-icon"></div>
+							<a href="https://goo.gl/maps/JfJh6gpNaedQcGGq6" target="_blank">
 
-							<div class="contact-text"><span>Endere&ccedil;o: Av Par&aacute; n&ordm; 1217 sala 03 - Navegantes Porto alegre RS CEP 90240-592. </span></div>
+							<div class="contact-icon">
+								<i class="fa fa-map-marker" aria-hidden="true"></i>
+							</div>
+							</a>
+
+							<div class="contact-text"><span>Av Par&aacute; n&ordm; 1217, Sala 03<br>CEP 90240-592.<br> Navegantes, Porto Alegre-RS  </span></div>
 						</div>
 					</div>
 				</div>
@@ -848,7 +869,16 @@
 						</ul>
 					</div>
 
-					<div class="footer-text"><span>Copyright &copy; 2019&nbsp;Yuuup Monitoramento Veicular&nbsp;all rights reserved. </span></div>
+
+					<div class="footer-text">
+						<span>Copyright &copy; 2019&nbsp;Yuuup Monitoramento Veicular&nbsp;all rights reserved. </span><br>
+
+						<a href="#" class="float-right" onclick="window.open('https://www.sitelock.com/verify.php?site=yuuup.com.br','SiteLock','width=600,height=600,left=160,top=170');" >
+							<img class="img-responsive" alt="SiteLock" title="SiteLock" src="//shield.sitelock.com/shield/yuuup.com.br" />
+						</a>
+
+
+					</div>
 				</div>
 			</div>
 		</div>
