--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="zxx">
+<html lang="pt-BR">
 <head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"><meta http-equiv="x-ua-compatible" content="ie=edge">
 	<title>Yuuup Feito para voc&ecirc;</title>
 	<meta name="description" content=""><meta name="viewport" content="width=device-width, initial-scale=1"><!-- favicon
@@ -32,9 +32,10 @@
 		============================================ -->
 	<link href="style.css" rel="stylesheet" /><!-- responsive CSS
 		============================================ -->
+
 	<link href="css/responsive.css" rel="stylesheet" /><!-- Style customizer (Remove these two lines please) -->
 	<link href="css/color/color-21.css" rel="stylesheet" /><!-- modernizr JS
-		============================================ --><script src="js/vendor/modernizr-2.8.3.min.js"></script><meta name="theme-color" content="#0077ff"><meta name="apple-mobile-web-app-status-bar-style" content="#0077ff"><meta name="msapplication-navbutton-color" content="#0077ff">
+		============================================ --><script src="js/vendor/modernizr-2.8.3.min.js"></script><meta name="theme-color" content="#000000"><meta name="apple-mobile-web-app-status-bar-style" content="#000000"><meta name="msapplication-navbutton-color" content="#000000">
 </head>
 <body><!--[if lt IE 8]>
 <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
@@ -42,7 +43,7 @@
 <div class="wrapper">
 	<header class="header-area"><!-- Menu Area
                 ============================================ -->
-		<div class="sticker" id="main-menu">
+		<div class="sticker" id="main-menu" style="z-index: 500">
 			<div class="container">
 
 				<div class="row">
@@ -296,7 +297,7 @@
 	<div class="video-area" id="video">
 		<div class="container">
 			<div class="row">
-				<video class="video-area" style="width: 100%" controls autoplay>
+				<video class="video-area" style="width: 100%; z-index: -10" controls autoplay>
 					<source src="video/yuuup.mp4" type="video/mp4">
 					Your browser does not support the video tag.
 				</video>
@@ -368,12 +369,14 @@
 
 						<p>Fa&ccedil;a parte deste clube ao qual voc&ecirc; s&oacute; tem a ganhar, nosso melhor Marketing e sua indica&ccedil;&atilde;o, assim sendo reconhecemos e oferecemos este sistema de incentivo, ao qual voc&ecirc; ganha desconto por indica&ccedil;&atilde;o. A seguir nosso sistema, se voc&ecirc; j&aacute; for cliente, poder&aacute; acessar atrav&eacute;s deste sistema incr&iacute;vel. Confira!</p>
 					</div>
+					<div class="form-inline text-center col-xs-12 col-md-offset-4 col-md-4 col-sm-8 col-sm-offset-2">
 
-					<form class="contact-from" action="http://sistema.yuuup.com.br/" method="post">
-						<input name="login" placeholder="Usuário" type="text" />
-						<input name="senha" placeholder="Senha" type="password" />
-						<input class="submit" name="Login" type="submit" value="Acessar" />
-					</form>
+						<form class="contact-from" action="http://sistema.yuuup.com.br/" method="post">
+							<input name="login" placeholder="Usuário" type="text" />
+							<input name="senha" placeholder="Senha" type="password" />
+							<input class="submit" name="Login" type="submit" value="Acessar" />
+						</form>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -470,27 +473,27 @@
 
 		<div class="screenshot-slider">
 			<div class="single-screenshot">
-				<div class="image"><a class="venobox" href="img/screenshort/1.jpg"><img alt="" src="img/screenshort/1.jpg" /></a></div>
+				<div class="image"><a class="venobox" href="aplicativo/app1.png"><img alt="" src="aplicativo/app1.png" /></a></div>
 			</div>
 
 			<div class="single-screenshot">
-				<div class="image"><a class="venobox" href="img/screenshort/2.jpg"><img alt="" src="img/screenshort/2.jpg" /></a></div>
+				<div class="image"><a class="venobox" href="aplicativo/app2.png"><img alt="" src="aplicativo/app2.png" /></a></div>
 			</div>
 
 			<div class="single-screenshot">
-				<div class="image"><a class="venobox" href="img/screenshort/1.jpg"><img alt="" src="img/screenshort/1.jpg" /></a></div>
+				<div class="image"><a class="venobox" href="aplicativo/app3.png"><img alt="" src="aplicativo/app3.png" /></a></div>
 			</div>
 
 			<div class="single-screenshot">
-				<div class="image"><a class="venobox" href="img/screenshort/2.jpg"><img alt="" src="img/screenshort/2.jpg" /></a></div>
+				<div class="image"><a class="venobox" href="aplicativo/app4.png"><img alt="" src="aplicativo/app4.png" /></a></div>
 			</div>
 
 			<div class="single-screenshot">
-				<div class="image"><a class="venobox" href="img/screenshort/1.jpg"><img alt="" src="img/screenshort/1.jpg" /></a></div>
+				<div class="image"><a class="venobox" href="aplicativo/app5.png"><img alt="" src="aplicativo/app5.png" /></a></div>
 			</div>
 
 			<div class="single-screenshot">
-				<div class="image"><a class="venobox" href="img/screenshort/2.jpg"><img alt="" src="img/screenshort/2.jpg" /></a></div>
+				<div class="image"><a class="venobox" href="aplicativo/app6.png"><img alt="" src="aplicativo/app6.png" /></a></div>
 			</div>
 		</div>
 	</div>
@@ -845,7 +848,7 @@
 							</div>
 							</a>
 
-							<div class="contact-text"><span>Av Par&aacute; n&ordm; 1217, Sala 03<br>CEP 90240-592.<br> Navegantes, Porto Alegre-RS  </span></div>
+							<div class="contact-text"><span>Av Par&aacute; n&ordm; 1217, Sala 03<br>Navegantes, Porto Alegre-RS  </span></div>
 						</div>
 					</div>
 				</div>
