--- a/index.html
+++ b/index.html
@@ -771,18 +771,18 @@
 
 	<div class="col-xs-12 ptb-110">
 		<div class="container">
+			<div class="title-style title-pb5 text-center">
+				<h1>Parceiros</h1>
+
+			</div>
 			<div class="row">
-					<div class="col-lg-2 col-md-3 col-sm-4 col-xs-6 single-item2"><a href="#"><img alt="" src="img/logo-slider/2.png" /></a></div>
-					<div class="col-lg-2 col-md-3 col-sm-4 col-xs-6 single-item2"><a href="#"><img alt="" src="img/logo-slider/2.png" /></a></div>
-					<div class="col-lg-2 col-md-3 col-sm-4 col-xs-6 single-item2"><a href="#"><img alt="" src="img/logo-slider/2.png" /></a></div>
-					<div class="col-lg-2 col-md-3 col-sm-4 col-xs-6 single-item2"><a href="#"><img alt="" src="img/logo-slider/2.png" /></a></div>
-					<div class="col-lg-2 col-md-3 col-sm-4 col-xs-6 single-item2"><a href="#"><img alt="" src="img/logo-slider/2.png" /></a></div>
-					<div class="col-lg-2 col-md-3 col-sm-4 col-xs-6 single-item2"><a href="#"><img alt="" src="img/logo-slider/2.png" /></a></div>
-					<div class="col-lg-2 col-md-3 col-sm-4 col-xs-6 single-item2"><a href="#"><img alt="" src="img/logo-slider/2.png" /></a></div>
-					<div class="col-lg-2 col-md-3 col-sm-4 col-xs-6 single-item2"><a href="#"><img alt="" src="img/logo-slider/2.png" /></a></div>
-					<div class="col-lg-2 col-md-3 col-sm-4 col-xs-6 single-item2"><a href="#"><img alt="" src="img/logo-slider/2.png" /></a></div>
-					<div class="col-lg-2 col-md-3 col-sm-4 col-xs-6 single-item2"><a href="#"><img alt="" src="img/logo-slider/2.png" /></a></div>
-					<div class="col-lg-2 col-md-3 col-sm-4 col-xs-6 single-item2"><a href="#"><img alt="" src="img/logo-slider/2.png" /></a></div>
+					<div class="col-lg-2 col-md-3 col-sm-4 col-xs-6 single-item-icon"><a href="#"><img alt="" src="parceiros/5.png" style="margin-top: 15px"/></a></div>
+					<div class="col-lg-2 col-md-3 col-sm-4 col-xs-6 single-item-icon"><a href="#"><img alt="" src="parceiros/4.png" style="margin-top: 15px"/></a></div>
+					<div class="col-lg-2 col-md-3 col-sm-4 col-xs-6 single-item-icon"><a href="#"><img alt="" src="parceiros/2.png" style="margin-top: 15px"/></a></div>
+					<div class="col-lg-2 col-md-3 col-sm-4 col-xs-6 single-item-icon"><a href="#"><img alt="" src="parceiros/3.png" align="bottom"/></a></div>
+					<div class="col-lg-2 col-md-3 col-sm-4 col-xs-6 single-item-icon"><a href="#"><img alt="" src="parceiros/1.png" /></a></div>
+					<div class="col-lg-2 col-md-3 col-sm-4 col-xs-6 single-item-icon"><a href="#"><img alt="" src="parceiros/6.png" style="margin-top: 10px"/></a></div>
+<!--					<div class="col-lg-2 col-md-3 col-sm-4 col-xs-6 single-item2"><a href="#"><img alt="" src="img/logo-slider/2.png" /></a></div>-->
 
 			</div>
 		</div>
