--- a/index.html
+++ b/index.html
@@ -520,7 +520,8 @@
 								<h3>Tiago Vieira</h3>
 
 								<div class="team-social fix">
-									<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don&#39;t look.</p>
+									<p>Possuo uma pequena frota de carros aos quais alugo pra App.
+										Tive outras empresas e migrei para a Infinity e Yuuup pela qualidade no atendimento, valores, benefícios e principalmente pela transparência. Recomendo a todos que desejem uma cobertura completa.</p>
 								</div>
 
 								<div class="reating-icon"></div>
@@ -534,7 +535,8 @@
 								<h3>Rudnei de Oliveira</h3>
 
 								<div class="team-social fix">
-									<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don&#39;t look.</p>
+									<p>Tenho alguns carros com a Infinity Auto Gestão, excelente atendimento e ótimos benefícios.
+										Recomendo esta empresa.</p>
 								</div>
 
 								<div class="reating-icon"></div>
@@ -548,7 +550,7 @@
 								<h3>Airton Vianna</h3>
 
 								<div class="team-social fix">
-									<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don&#39;t look.</p>
+									<p>Migrei de outra empresa para a Infinity e Yuuup ao qual além do atendimento ótimo os valores realmente são atrativos pelos benefícios oferecidos. Recomendo.</p>
 								</div>
 
 								<div class="reating-icon"></div>
@@ -562,7 +564,7 @@
 								<h3>Laudig&eacute;rio Correa&nbsp;</h3>
 
 								<div class="team-social fix">
-									<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don&#39;t look.</p>
+									<p>Excelente atendimento pós venda, monitoramento de primeiro mundo e suporte de qualidade. Recomendo a Yuuup.</p>
 								</div>
 
 								<div class="reating-icon"></div>
@@ -576,7 +578,7 @@
 								<h3>Leandro de Cassio</h3>
 
 								<div class="team-social fix">
-									<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don&#39;t look.</p>
+									<p>Faço aplicativo e hoje tenho a segurança em ter uma cobertura completa com um monitoramento de primeiro mundo por um preço justo. Recomendo!</p>
 								</div>
 
 								<div class="reating-icon"></div>
@@ -645,11 +647,11 @@
 							<ul style="text-transform: uppercase; padding: 15px">
 								<li>RASTREMANETO E MONITORAMENTO</li>
 								<li>ACESSO VIA APP</li>
-								<li>TELEMETRIA</li>
-								<li>ACESSO TOTAL WEB</li>
-								<li>COMANDOS LIGA/DESLIGA</li>
-								<li>SUPORTE TÉCNICO 24/7</li>
-								<small>*30 dias após Instalação (R$ 350,00 ref. a instalação comodato).</small>
+								<li>TELEMETRIA COMPLETA</li>
+								<li>ACESSO TOTAL VIA WEB</li>
+								<li>DIVERSOS COMANDOS</li>
+								<li>SUPORTE 24/7</li>
+								<small>*30 dias após Instalação (R$ 350,00 ref. instalação comodato).</small>
 							</ul>
 
 <!--							<div class="price-btn"><button class="button" type="button">Sign up</button></div>-->
@@ -673,10 +675,12 @@
 							<ul style="text-transform: uppercase; padding: 15px">
 								<li>Cobertura Veicular Completa</li>
 								<li>Roubo / Furto / Colisão</li>
-								<li>Danos Materiais a Terceiros</li>
-								<li>Danos Natureza e Incêndio</li>
-								<li>Assistência 24HS (Guincho, Carga bateria, Chaveiro, troca pneus, e muito mais)</li>
+								<li>Incêncio / Danos Natureza</li>
+								<li>Danos a Terceiros</li>
 								<li>Clube de benefícios</li>
+								<li>Danos Natureza e Incêndio</li>
+								<li>Assistência 24HS (Guincho, Carga bateria, Chaveiro, troca pneus)</li>
+								<li>E muito mais, confira!</li>
 								<small>*Fipe até R$ 20.000,00, outros valores entrar em contato.</small>
 							</ul>
 
@@ -741,7 +745,7 @@
 					<div class="title-style title-pb5">
 						<h1>sistema de monitoramento</h1>
 
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque vel volutpat felis, eu condimentum massa. Pellentesque mollis eros vel mattis tempor. Aliquam</p>
+						<p>Aqui você tem total acesso ao seu veículo, com este sistema intuitivo fica fácil de monitorar, criar cercas virtuais, visualizar mapa, informações gerais do veículo, comandos de liga/desliga entre outros recurso que preparamos exclusivamente para você. Faça Login e aproveite.</p>
 					</div>
 				</div>
 			</div>
