--- a/app/index.html
+++ b/app/index.html
@@ -60,7 +60,7 @@
 				</div>
 				<div class="row">
 					<div class="col-md-12">
-						<div class="logo float-left"><a href="index.html"><img alt="logo" src="../img/logo/logo.svg" style="height: 70px"/></a></div>
+						<div class="logo float-left"><a href="index.html"><img alt="logo" src="../img/logo/logo.svg" style="height: 65px"/></a></div>
 
 						<div class="main-menu float-right">
 							<nav>
@@ -88,7 +88,7 @@
 			</div>
 		</div>
 	</header>
-	<div class="height-100vh newsletter-area bg-oapcity-40 ptb-120 bg-img-4"  id="monitoramento">
+	<div class="height-100vh newsletter-area bg-oapcity-40 ptb-120 bg-img-4" style="padding-top: 200px"  id="monitoramento">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12 text-center">
