Ajustando estrutra app

--- a/app/index.html
+++ b/app/index.html
@@ -60,7 +60,7 @@
 				</div>
 				<div class="row">
 					<div class="col-md-12">
-						<div class="logo float-left"><a href="index.html"><img alt="logo" src="../img/logo/logo.svg" style="height: 65px"/></a></div>
+						<div class="logo float-left"><a href="index.html"><img alt="logo" src="../img/logo/logo.svg" style="height: 55px"/></a></div>
 
 						<div class="main-menu float-right">
 							<nav>
@@ -122,7 +122,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="download-area bg-oapcity-40 ptb-120 bg-img-3" id="indique">
+	<div class="download-area bg-oapcity-40 ptb-120 bg-img-3 height-100vh" style="padding-top: 200px" id="indique">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12 text-center">
