Ajuste de tamanho vídeo

--- a/app/index.html
+++ b/app/index.html
@@ -65,8 +65,8 @@
 						<div class="main-menu float-right">
 							<nav>
 								<ul>
-									<li class="active"><a href="#monitoramento">Monitoramento</a></li>
-									<li><a href="#indique">Indique & Ganhe</a></li>
+									<li class="active"><a href="index.html">Monitoramento</a></li>
+									<li><a href="associados.html">Indique & Ganhe</a></li>
 									<li><a href="#support-area">suporte</a></li>
 								</ul>
 							</nav>
@@ -77,8 +77,8 @@
 						<div class="mobile-menu">
 							<nav>
 								<ul>
-									<li class="active"><a href="#monitoramento">Monitoramento</a></li>
-									<li><a href="#indique">Indique & Ganhe</a></li>
+									<li class="active"><a href="index.html">Monitoramento</a></li>
+									<li><a href="associados.html">Indique & Ganhe</a></li>
 									<li><a href="#support-area">suporte</a></li>
 								</ul>
 							</nav>
@@ -88,14 +88,14 @@
 			</div>
 		</div>
 	</header>
-	<div class="height-100vh newsletter-area bg-oapcity-40 ptb-120 bg-img-4" style="padding-top: 150px"  id="monitoramento">
+	<div class="height-100vh newsletter-area bg-oapcity-40 ptb-120 bg-img-4" style="padding-top: 120px"  id="monitoramento">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12 text-center">
 					<div class="title-style title-pb5">
 						<h1>sistema de monitoramento</h1>
 
-						<p>Aqui você tem total acesso ao seu veículo, com este sistema intuitivo fica fácil de monitorar, criar cercas virtuais, visualizar mapa, informações gerais do veículo, comandos de liga/desliga entre outros recurso que preparamos exclusivamente para você. Faça Login e aproveite.</p>
+						<small style="color: white">Aqui você tem total acesso ao seu veículo, com este sistema intuitivo fica fácil de monitorar, criar cercas virtuais, visualizar mapa, informações gerais do veículo, comandos de liga/desliga entre outros recurso que preparamos exclusivamente para você. Faça Login e aproveite.</small>
 					</div>
 				</div>
 			</div>
@@ -122,14 +122,14 @@
 			</div>
 		</div>
 	</div>
-	<div class="download-area bg-oapcity-40 ptb-120 bg-img-3 height-100vh" style="padding-top: 150px" id="indique">
+	<div class="download-area bg-oapcity-40 ptb-120 bg-img-3 height-100vh" style="padding-top: 50px" id="indique">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12 text-center">
 					<div class="title-style title-pb2">
 						<h1>Clube de Associados Indique e Ganhe!</h1>
 
-						<p>Fa&ccedil;a parte deste clube ao qual voc&ecirc; s&oacute; tem a ganhar, nosso melhor Marketing e sua indica&ccedil;&atilde;o, assim sendo reconhecemos e oferecemos este sistema de incentivo, ao qual voc&ecirc; ganha desconto por indica&ccedil;&atilde;o. A seguir nosso sistema, se voc&ecirc; j&aacute; for cliente, poder&aacute; acessar atrav&eacute;s deste sistema incr&iacute;vel. Confira!</p>
+						<small style="color: white">Fa&ccedil;a parte deste clube ao qual voc&ecirc; s&oacute; tem a ganhar, nosso melhor Marketing e sua indica&ccedil;&atilde;o, assim sendo reconhecemos e oferecemos este sistema de incentivo, ao qual voc&ecirc; ganha desconto por indica&ccedil;&atilde;o. A seguir nosso sistema, se voc&ecirc; j&aacute; for cliente, poder&aacute; acessar atrav&eacute;s deste sistema incr&iacute;vel. Confira!</small>
 					</div>
 					<div class="form-inline text-center col-xs-12 col-md-offset-4 col-md-4 col-sm-8 col-sm-offset-2">
 
