--- a/index.html
+++ b/index.html
@@ -875,7 +875,7 @@
 
             </div>
             <div class="row" >
-                <img src="img/parceiros.png" style="width: 100%">
+                <img src="img/parceiros-logos.png" style="width: 100%">
             </div>
         </div>
     </div>
