Mudanças na logo e texto

--- a/index.html
+++ b/index.html
@@ -63,13 +63,6 @@
                     </div>
                     <div class="row">
                         <div class="col-xs-12" style="text-align: center">
-                            <span style="color: #FFFFFF; font-family: 'Lato', sans-serif;"
-                                  class="center-block hidden-md hidden-lg"><i style="color: white"
-                                                                              class="fa fa-instagram"
-                                                                              aria-hidden="true"></i> @yuuupmonitoramento</span>
-
-                        </div>
-                        <div class="col-xs-12" style="text-align: center">
                             <span class="center-block hidden-md hidden-lg"
                                   style="color: #FFFFFF; font-weight: bold;font-family: 'Lato', sans-serif;">0800 042 0060</span>
 
@@ -78,7 +71,7 @@
                 </div>
                 <div class="row">
                     <div class="col-md-12">
-                        <div class="logo float-left"><a href="index.html"><img alt="logo" src="img/logo/logo.svg" style="height: 5em;margin-top:-20px"/></a>
+                        <div class="logo float-left"><a href="index.html"><img alt="logo" src="img/logo/logo-branco.svg" style="height: 5em;margin-top:-20px"/></a>
                         </div>
 
                         <div class="main-menu float-right">
@@ -182,8 +175,7 @@
 
                             <h4 class="ht-pt">Tranquilidade</h4>
 
-                            <p>Sua Tranquilidade e a nossa preocupa&ccedil;&atilde;o, para tanto estamos sempre na
-                                vanguarda da tecnologia com Monitoramento 24/7 e uma equipe qualificada.</p>
+                            <p>Sua Tranquilidade e a nossa preocupação, para tanto estamos sempre na vanguarda da tecnologia com Monitoramento 24/7 e uma equipe qualificada. Plataforma Homologada ANTT.</p>
                         </div>
                     </div>
 
@@ -228,10 +220,9 @@
                                 frota nacional n&atilde;o&nbsp;possuem nenhum tipo de Seguro ou Cobertura Veicular. Para
                                 tanto ofertamos uma Parceria exclusiva no RS com a Infinity Auto Gest&atilde;o.</p>
 
-                            <p class="about-pb">Agora sim ficou f&aacute;cil, voc&ecirc; tem a disposi&ccedil;&atilde;o
-                                al&eacute;m do Rastreamento e Monitoramento Veicular uma Cobertura total contra, Roubo,
-                                Furto, Colis&atilde;o, danos da natureza, inc&ecirc;ndio, assist&ecirc;ncia 24hs e um
-                                clube de benef&iacute;cios que ir&atilde;o&nbsp;lhe surpreender.&nbsp;&nbsp;</p>
+                            <p class="about-pb">Agora sim ficou fácil, você tem a disposição além do Rastreamento e Monitoramento Veicular uma Cobertura total contra,
+                                Roubo, Furto, Colisão, danos da natureza, incêndio, assistência 24hs e um clube de benefícios que irão lhe surpreender.
+                                Estamos inscrito no CNPJ sob nº 31.627.230/0001-09 Inscrição Estadual sob nº 301.092.2.1 - Endereço Av. Pará 1217 Sla 03 Navegantes - Porto Alegre/RS CEP 90.240-592.&nbsp;</p>
 
                             <div class="about-icon">
                                 <ul>
