suporte e logo arrumados

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 </div>
                 <div class="row">
                     <div class="col-md-12">
-                        <div class="logo float-left"><a href="index.html"><img alt="logo" src="img/logo/logo-branco.svg" style="height: 5em;margin-top:-20px"/></a>
+                        <div class="logo float-left"><a href="index.html"><img alt="logo" src="img/logo/yuup-branco.png" style="height: 5em;margin-top:-20px"/></a>
                         </div>
 
                         <div class="main-menu float-right">
@@ -185,8 +185,7 @@
 
                             <h4 class="ht-pt">Suporte 24/7</h4>
 
-                            <p>Voc&ecirc; pode contar com nosso suporte t&eacute;cnico 24/7. Oferecemos um atendimento
-                                0800 direto ao qual em caso de emerg&ecirc;ncia poder&aacute; ser acionado.</p>
+                            <p>Você pode contar com nosso suporte técnico 24/7. Oferecemos um atendimento 0800 direto ao qual em caso de emergência poderá ser acionado. Precisar e só ligar 0800 042 0060</p>
                         </div>
                     </div>
                 </div>
