alteração parceiros, links sociais

--- a/index.html
+++ b/index.html
@@ -865,7 +865,7 @@
 
             </div>
             <div class="row" >
-                <img src="img/parceiros-logos.png" style="width: 100%">
+                <img src="img/parceiros.png" style="width: 100%">
             </div>
         </div>
     </div>
@@ -958,9 +958,9 @@
                         </ul>
                     </div>
                     <div class="col-sm-12">
-                        <a href="#" class="float-left"><i style="font-size: 36px;margin:10px"
+                        <a href="https://www.facebook.com/yuuupmonitoramento" class="float-left"><i style="font-size: 36px;margin:10px"
                                                           class="fa fa-facebook-square" aria-hidden="true"></i></a>
-                        <a href="#" class="float-left"><i style="font-size: 36px;margin:10px" class="fa fa-instagram"
+                        <a href="https://www.instagram.com/yuuup_feito_para_voce/" class="float-left"><i style="font-size: 36px;margin:10px" class="fa fa-instagram"
                                                           aria-hidden="true"></i></a>
                         <a href="#" class="float-right"
                            onclick="window.open('https://www.sitelock.com/verify.php?site=yuuup.com.br','SiteLock','width=600,height=600,left=160,top=170');">
