--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Yuuup Feito para voc&ecirc;</title>
     <meta name="description" content="">
+    <script src="index.js" defer></script>
+    <link rel="manifest" href="manifest.json">
     <meta name="viewport" content="width=device-width, initial-scale=1"><!-- favicon
 		============================================ -->
     <link href="img/favicon.ico" rel="shortcut icon" type="image/x-icon"/><!-- Bootstrap CSS
